--- a/kitty.conf
+++ b/kitty.conf
@@ -6,10 +6,10 @@ cursor_shape beam
 
 background_opacity 0.75 
 # background_blur 25
-# font_family        Hack Nerd Font Mono
-# bold_font          Hack Nerd Font Mono:style=Bold
-# italic_font        Hack Nerd Font Mono:style=Italic
-# bold_italic_font   Hack Nerd Font Mono:style=Bold Italic
+font_family        Hack Nerd Font Mono
+bold_font          Hack Nerd Font Mono:style=Bold
+italic_font        Hack Nerd Font Mono:style=Italic
+bold_italic_font   Hack Nerd Font Mono:style=Bold Italic
 
 
 # BEGIN_KITTY_FONTS
