--- a/kitty.conf
+++ b/kitty.conf
@@ -1,9 +1,10 @@
 font_size 22
 confirm_os_window_close 0
 background #011319
-shell fish
+shell /opt/homebrew/bin/fish
 cursor_shape beam
 window_padding_width 0 10
+map alt+s send_text all \x1bs
 
 background_opacity 0.75 
 # background_blur 25
